--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Margaret_Hamilton_1995.jpg/200px-Margaret_Hamilton_1995.jpg" alt="Grupo de Formadores PC EM">
 
-<p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Vehicula non.<br>
-            Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
-            num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
+<p class="texto"> Margaret Heafield Hamilton (Paoli, 1936) é matemática, cientista da<br>
+    computação, engenheira de software e empresária.
+
+    Foi diretora da Divisão de Software no Laboratório de Instrumentação do MIT, que<br> 
+    desenvolveu o programa de voo usado no projeto Apollo 11, software que impediu que <br>
+    o pouso na Lua fosse abortado por falha humana. Você entendeu bem: sem o programa <br>
+    que ela escreveu, nada de "pequeno passo para o homem, grande passo para a <br>
+    humanidade". Foi um grande passo para as mulheres também.
 
 
-        <p class="texto"> Mussum Ipsum, cacilds vidis litro abertis. <strong>Manduma pindureta quium dia nois paga.</strong> Vehicula non.<br>
-            Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. Sapien in monti palavris qui <br>
-            num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!
+        <p class="texto"> Em 1986 ela fundou sua própria empresa, a Hamilton Technologies<br>
+             Inc com sede em Cambridge. Onde desenvolveu seu paradigma para Sistemas e <br>
+             Design de Software, o Development Before the Fact.<br>
+
+            Além de ser creditada por ter criado o termo "engenharia de software", foi uma <br>
+            das desenvolvedoras dos conceitos de computação paralela, priority scheduling, <br>
+            teste de sistema, e capacidade de decisão com integração humana, tais como <br>
+            mostradores de prioridade que viriam a ser o fundamento do design de software <br>
+            ultra confiável.<br>
+            
+            Foi premiada com a Medalha Presidencial da Liberdade pelo presidente dos EUA Barack<br>
+             Obama, maior honra a um civil daquele país.
         </p>
     </body>
