--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Margaret_Hamilton_1995.jpg/200px-Margaret_Hamilton_1995.jpg" alt="Grupo de Formadores PC EM">
 
 <p class="texto"> Margaret Heafield Hamilton (Paoli, 1936) é matemática, cientista da<br>
-    computação, engenheira de software e empresária.
+    computação, engenheira de software e empresária.<br> <br> 
 
     Foi diretora da Divisão de Software no Laboratório de Instrumentação do MIT, que<br> 
     desenvolveu o programa de voo usado no projeto Apollo 11, software que impediu que <br>
