--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
 </html>
 
-<h1 id="titulo"> Pensamento Computacional - EM </h1>
+<h1 id="titulo">  Margaret Heafield Hamilton </h1>
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Margaret_Hamilton_1995.jpg/200px-Margaret_Hamilton_1995.jpg" alt="Grupo de Formadores PC EM">
 
