--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<meta charset="UTF-8">
-		<title>Pensamento Computacional - EM</title>
+		<title>Margaret Heafield Hamilton</title>
     </head>
 
     <body>
