--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 		<meta charset="UTF-8">
 		<title>Margaret Heafield Hamilton</title>
@@ -7,7 +7,6 @@
     </head>
 
     <body>
-</html>
 
 <h1 id="titulo">  Margaret Heafield Hamilton </h1>
 
@@ -37,3 +36,4 @@
              Obama, maior honra a um civil daquele país.
         </p>
     </body>
+    </html>
